examples/type_system/failing/98_hm_fun_arity_mismatch_contextual.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/98_hm_fun_arity_mismatch_contextual.flx
// error[E300]: Wrong Number Of Arguments
//
// I am applying a function to too many arguments.
//
//   examples/type_system/failing/98_hm_fun_arity_mismatch_contextual.flx:46:14
//    |
// 46 |     let _f = if true {
//    |              ^^^^^^^^^
// 47 |         one_arg
//    | ^^^^^^^^^^^^^^^
//    |         ------- this branch established the expected type
// 48 |     } else {
//    | ^^^^^^^^^^^^
// 49 |         two_args
//    | ^^^^^^^^^^^^^^^^
//    |         -------- this branch conflicts with that type
// 50 |     }
//    | ^^^^^
//
// Note:
//   this function takes: 1 argument(s)
//   but this call passes: 2 argument(s)
//   the `then` branch fixes the type expected from the whole `if`
//   the `else` branch produces the competing type
//
// Help:
//   Remove 1 extra argument(s).
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: function-type arity mismatch should report arity-specific diagnostics.
fn one_arg(x: Int) -> Int {
    x
}

fn two_args(x: Int, y: Int) -> Int {
    x + y
}

fn main() -> Unit {
    let _f = if true {
        one_arg
    } else {
        two_args
    }
}
